# nice_gliTchers

./: README.md  pyproject.toml  run_all.py  run_exp.py
correctors/: __init__.py  all_edit_patterns.py  base.py  delete_all.py  shuffle.py  utils.py  your_custom_corrector.py
datasets/bea19-dev-correction/: README.md  ens-esc-pillars7.txt  gec-t5-base-clang8.txt  gec-t5-large-clang8.txt
experiments/: README.md  __init__.py  add_prefix.py  base.py  delete_all.py  delete_random.py  keep_all.py  repreat.py  run_exp.py  scorer.py  shuffle.py  static_response.py
experiments/exp-datasets/bea19-dev-correction/: gector-3sys-voting.txt  gector-4sys-voting.txt
experiments/exp-datasets/bea19-dev-correction/gotutiyan/: gector-bert-large-cased-5k.txt  gector-deberta-large-5k.txt  gector-roberta-large-5k.txt  gector-xlnet-large-cased-5k.txt
src/nice_glitchers/: __init__.py  scorer.py
src/nice_glitchers/correctors/: __init__.py  add_prefix.py  all_edit_patterns.py  base.py  delete_random.py  keep_all.py  knn_search.py  repreat.py  static_response.py  your_custom_corrector.py
src/nice_glitchers/metrics/: __init__.py  llm.py
src/nice_glitchers/postprocessors/: __init__.py  all_edit_patterns.py  base.py  etype_filter.py  keep_all.py  knn_search.py  operation_filter.py  remove_pterrant_minus.py  utils.py
