[project]
name = "nice-glitchers"
version = "0.1.0"
description = "A library for hacking GEC metrics for NLP2025 shared task partcipation."
readme = "README.md"
authors = [
    { name = "gotuiyan" }
]
requires-python = ">=3.11.0"
dependencies = [
    "gec-datasets>=0.1.0",
    "gec-metrics>=0.1.0",
    "openai>=1.63.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
